PROD-2935: fix scroll overflow

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -12154,7 +12154,7 @@ Chanelog:
   height: 2.25rem;
   width: 2.25rem;
   min-width: 2.25rem;
-  
+
   .ant-image {
     width: 36px;
     height: 36px;
@@ -12456,7 +12456,6 @@ Chanelog:
 .contacts-list {
   padding: 0.75rem;
   list-style: none;
-  overflow-x: hidden;
   height: 100% !important;
 }
 
