--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -51,6 +51,7 @@
 
 .contact_layout {
     height: 100%;
+    height: -webkit-fill-available;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
